--- a/src/components/book/book-main/book-form/book-form.css
+++ b/src/components/book/book-main/book-form/book-form.css
@@ -1,5 +1,112 @@
-.book-form{
-    height: 600px;
-    width: 500px;
-    border: 1px solid;
+.book-form {
+  height: calc(100vh - 35px);
+  width: 500px;
+  border: 1px solid;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+}
+.top {
+  height: 60%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+.top-label {
+  height: 60px;
+  width: 100%;
+  border-bottom: 2px solid rgba(76, 76, 76, 0.322);
+  display: flex;
+  align-items: center;
+  font-size: 1.8rem;
+  font-weight: 900;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.text-top {
+  height: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: #d8d8d8;
+  border-radius: 6px;
+  padding: 10px;
+  position: relative;
+  font-size: 0.78rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.text-top-label {
+  font-size: 1.1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 400;
+}
+
+.text {
+  position: absolute;
+  bottom: 5px;
+  right: 8px;
+  font-size: 9px;
+  font-weight: 400;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.chooseModel {
+  height: 45px;
+  width: 210px;
+  display: flex;
+  gap: 0.5px;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #d8d8d8;
+}
+.choose1 {
+  height: 100%;
+  width: 50%;
+  box-sizing: border-box;
+  border: 1px solid transparent;
+}
+.choose2 {
+  height: 100%;
+  width: 50%;
+  box-sizing: border-box;
+  border: 2px solid transparent;
+}
+.choose1,
+.choose2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: transparent;
+}
+.chooseColor {
+  height: 100px;
+  width: auto;
+  display: flex;
+}
+.colorsTray {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  width: 100%;
+}
+.colors {
+  height: 40px;
+  width: 40px;
+  border: 1.5px solid;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.booking-form {
+  height: 40%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
