--- a/src/components/book/book-main/book-form/book-form.css
+++ b/src/components/book/book-main/book-form/book-form.css
@@ -1,11 +1,35 @@
 .book-form {
-  height: calc(100vh - 35px);
   width: 500px;
-  border: 1px solid;
+  position: absolute;
+  right: 0;
+  box-shadow: 1px 1px 5px black;
+  transition: 0.4s ease-in;
+}
+.form-container{
   display: flex;
+  gap: 36px;
   justify-content: center;
   flex-direction: column;
   padding: 20px;
+  position: relative;
+}
+.form-close-btn{
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.8rem;
+  z-index: 69;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  transition: 0.2s ease-in;
+}
+.form-close-btn:hover{
+  background-color: rgb(239, 239, 239);
 }
 .top {
   height: 60%;
@@ -83,12 +107,23 @@
   cursor: pointer;
   border-radius: 5px;
   background-color: transparent;
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .chooseColor {
   height: 100px;
   width: auto;
   display: flex;
+  justify-content: space-around;
+  flex-direction: column;
 }
+.color-label {
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 .colorsTray {
   display: flex;
   align-items: center;
@@ -99,9 +134,13 @@
 .colors {
   height: 40px;
   width: 40px;
-  border: 1.5px solid;
+  border: 2px solid transparent;
   border-radius: 50%;
   cursor: pointer;
+}
+.form-label {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(91, 91, 91);
 }
 
 .booking-form {
@@ -109,4 +148,108 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  gap: 15px;
+}
+.getName,
+.getNumber,
+.getMail,
+.getDealer {
+  height: 50px;
+  width: 100%;
+  border: 1px solid;
+  outline: none;
+  padding: 10px;
+  font-size: 1.05rem;
+  border-radius: 3px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 200;
+}
+.getAddress {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  gap: 8px;
+}
+
+.getState,
+.getCity {
+  height: 100%;
+  width: 49%;
+  font-size: 1.05rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 200;
+  outline: none;
+  border-radius: 3px;
+  border: 1px solid;
+}
+.verify-note{
+  padding: 0 4px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 0.94rem;
+}
+.verify-capatcha {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.capatcha-quiz,
+.capatcha-answer {
+  height: 100%;
+  background-color: rgb(208, 208, 208);
+}
+.verify-capatcha span{
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.capatcha-quiz {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.capatcha-answer {
+ outline: none;
+ border: none;
+ padding: 0 10px;
+ font-size: 1rem;
+ font-weight: 400;
+ text-align: center;
+}
+ input[type="number"]::-webkit-inner-spin-button, 
+ input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.getAgreement{
+  height: 30px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+}
+.submitBtn {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+.bookBtn {
+  height: 50px;
+  width: 90%;
+  background-color: #7f7f7f;
+  color: white;
+  border-radius: 3px;
+  border: none;
+  font-size: 1.08rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 400;
+}
+.bookBtn:active {
+  background-color: #929292;
 }
