--- a/src/components/features/features-container.css
+++ b/src/components/features/features-container.css
@@ -1,10 +1,35 @@
-.nav-book{
-    height: 380px;
-    width: 180px;
-    border: 1.8px solid rgb(142, 142, 142);
-    border-radius: 10px;
-    position: absolute;
-    top: 220px;
-    left: 12px;
-    padding: 20px;
+.features {
+  height: 350px;
+  width: 180px;
+  border: 1.8px solid rgb(142, 142, 142);
+  border-radius: 10px;
+  position: absolute;
+  top: 220px;
+  left: 12px;
+  padding: 24px;
+  z-index: 99999;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.fearure {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.feaIcon {
+  height: 40px;
+}
+.feaContext {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  margin-left: 5px;
+}
+.feaLabel {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 900;
+}
+.feaDescription {
+  font-family: Calibri, "Trebuchet MS", sans-serif;
 }
