--- a/src/components/book/book-main/book-main.css
+++ b/src/components/book/book-main/book-main.css
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 .book-main {
-  height: calc(100vh - 35px);
-  background-color: white;
+  overflow: hidden;
+  position: relative;
+}
+.logo{
+  position: absolute;
+  z-index: 9999;
+  top: 20px;
+  left: 30px;
+  height: 60px;
+  width: fit-content;
+  overflow: hidden;
+}
+.logo img{
+  height: 100%;
 }
 .bg-text{
-  height: 300px;
-  width: fit-content;
+  height: 350px;
   font-weight: 900;
   padding: 0 40px;
   font-family: "Roboto Condensed", sans-serif;
@@ -15,8 +26,8 @@
   justify-content: center;
   color: rgb(232, 232, 232);
   position: relative;
-  top: 10%;
-  left: 16%;
+  top: 3%;
+  left: 24%;
 }
 .product{
   position: absolute;
@@ -24,8 +35,58 @@
   align-items: center;
   justify-content: center;
   background-color: transparent;
+  backdrop-filter: blur(3px);
+  z-index: 20;
 }
 .product img{
-  height: 450px;
   margin-left: 30px;
 }
+.form-booking-btn{
+  position: absolute;
+  right: 8%;
+  bottom: 6%;
+  z-index: 999;
+  background-color: rgb(190, 190, 190);
+  color: black;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  padding: 14px;
+  height: fit-content;
+  width: fit-content;
+  overflow: hidden;
+}
+.form-booking-btn:active{
+  background-color: rgb(233, 233, 233);
+  color: black;
+}
+.chooseModel-main{
+  height: 45px;
+  width: 450px;
+  display: flex;
+  gap: 10px;
+  border-radius: 5px;
+  overflow: hidden;
+  position: absolute;
+  top: 6%;
+  left: 36%;
+  z-index: 999;
+}
+.choose-main{
+  height: 100%;
+  width: 30%;
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #d8d8d8;
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
