--- a/src/components/features/features-container.css
+++ b/src/components/features/features-container.css
@@ -1,7 +1,7 @@
 .features {
-  height: 350px;
+  height: fit-content;
   width: 180px;
-  border: 1.8px solid rgb(142, 142, 142);
+  border: 1.8px solid #c4c4c4;
   border-radius: 10px;
   position: absolute;
   top: 220px;
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 15px;
 }
 .fearure {
   display: flex;
